# rust-http-server

./: .gitignore  .gitmodules  Cargo.toml  README.md  error.txt  log.txt  run.bat  script.py  todo.txt  tsconfig.json
config/: config.json
logs/: log.txt
public/: index.html
public/assets/images/: lib.rs
public/client/: main.js
public/client/ts/: main.ts
public/pages/: error.html  index.html  pages.html
public/pages/asd/: index.html
public/pages/asd/data/: index.html
public/pages/asd/data/asd asd/: index.html
public/pages/page pages/: index.html
public/styles/: style.css
scripts/: benchmark_requests.py  log_parser.py
src/: database.rs  http.rs  http_request.rs  http_response.rs  lib.rs  logger.rs  main.rs  middleware.rs  prelude.rs  routes.rs
src/config/: database.rs  mod.rs
src/config/database/: collections.rs  mod.rs
src/http/: http_request.rs  http_response.rs  mod.rs
src/router/: cache.rs  controller.rs  middleware.rs  mod.rs  routes.rs
src/router/controller/: mod.rs  models.rs
wireshark/: TCP-1.pcapng
