[package]
name = "rust-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.136"
serde = { version = "1.0.217", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
url_serde = { version = "0.2.0" }
ctrlc = "3.4.5"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
strum = "0.27.0"
strum_macros = "0.27.0"
percent-encoding = "2.3.1"
erased-serde = "0.4.6"
typetag = "0.2.20"
rand = { version = "0.9.1", features = ["std"] }
