[package]
name = "rust-http-server"
version = "0.1.0"
edition = "2024"


[dependencies]
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde_json = "1.0.136"
serde = { version = "1.0.217", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
url_serde = { version = "0.2.0" }
tokio = { version = "1.43.0", features = ["full"] }
strum = "0.27.0"
strum_macros = "0.27.0"
percent-encoding = "2.3.1"
typetag = "0.2.20"
async-trait = "0.1.88"
once_cell = "1.21.3"
dashmap = "6.1.0"
log = "0.4.27"
env_logger = "0.11.8"
chrono = "0.4.41"

# Local dependency
horrible_database = { path = "horrible-database" }
